<?xml version="1.0" encoding="utf-8"?>
<DebugScreens>

    <entry
        description="@string/ua_device_info_view_description"
        navigationId="@id/ua_debug_device_info_navigation"
        title="@string/ua_device_info_title" />

    <entry
        description="@string/ua_event_view_description"
        navigationId="@id/eventListFragment"
        title="@string/ua_event_view_title" />

    <entry
        description="@string/ua_custom_event_view_description"
        navigationId="@id/ua_debug_custom_event_navigation"
        title="@string/ua_custom_event_view_title" />

    <entry
        description="@string/ua_debug_iaa_description"
        navigationId="@id/ua_debug_automation_navigation"
        title="@string/ua_debug_iaa" />

    <entry
        description="View schedules Actions"
        navigationId="@id/ua_debug_actions_schedules_navigation"
        title="Actions Schedules" />

    <entry
        description="View deferred schedule messages"
        navigationId="@id/ua_debug_deferred_schedules_navigation"
        title="Deferred Schedules" />

    <entry
        description="@string/ua_push_view_description"
        navigationId="@id/pushListFragment"
        title="@string/ua_push_view_title" />

</DebugScreens>
