<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ua_debug"
    app:startDestination="@id/debugFragment">

    <fragment
        android:id="@+id/debugFragment"
        android:name="com.urbanairship.debug.DebugFragment"
        android:label="@string/ua_debug_title">
        <action
            android:id="@+id/action_debugFragment_to_eventListFragment"
            app:destination="@id/eventListFragment" />
        <action
            android:id="@+id/action_debugFragment_to_pushListFragment"
            app:destination="@id/pushListFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventListFragment"
        android:name="com.urbanairship.debug.event.EventListFragment"
        android:label="@string/ua_event_view_title">
        <action
            android:id="@+id/action_eventListFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.urbanairship.debug.event.EventDetailsFragment"
        android:label="@string/ua_event_details">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/pushListFragment"
        android:name="com.urbanairship.debug.push.PushListFragment"
        android:label="@string/ua_push_view_title">
        <action
            android:id="@+id/action_pushListFragment_to_pushDetailsFragment"
            app:destination="@id/pushDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/pushDetailsFragment"
        android:name="com.urbanairship.debug.push.PushDetailsFragment"
        android:label="@string/ua_push_details">
        <argument
            android:name="pushId"
            app:argType="string" />
    </fragment>

</navigation>