<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ua_debug_deferred_schedules_navigation"
    app:startDestination="@id/deferredSchedulesFragment">

    <fragment
        android:id="@+id/deferredSchedulesFragment"
        android:name="com.urbanairship.debug.automation.DeferredScheduleListFragment"
        android:label="@string/ua_deferred_message_schedules">
        <action
            android:id="@+id/action_deferredScheduleListFragment_to_deferredScheduleDetailsFragment"
            app:destination="@id/deferredScheduleDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/deferredScheduleDetailsFragment"
        android:name="com.urbanairship.debug.automation.DeferredScheduleDetailsFragment"
        android:label="Deferred Schedule Details">
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_deferredScheduleDetailsFragment_to_audienceDetailsFragment"
            app:destination="@id/inAppAudienceDetailsFragment" />
        <action
            android:id="@+id/action_deferredScheduleDetailsFragment_to_triggersDetailsFragment"
            app:destination="@id/inAppTriggersDetailsFragment" />
    </fragment>
    <fragment
        android:id="@id/inAppAudienceDetailsFragment"
        android:name="com.urbanairship.debug.automation.AudienceDetailsFragment"
        android:label="@string/ua_audience_details_view_title">
        <argument
            android:name="audience"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@id/inAppTriggersDetailsFragment"
        android:name="com.urbanairship.debug.automation.TriggersDetailsFragment"
        android:label="@string/ua_debug_iaa_trigger_details">
        <argument
            android:name="trigger"
            app:argType="com.urbanairship.automation.Trigger" />
    </fragment>

</navigation>